--- a/templates/Filmology.html
+++ b/templates/Filmology.html
@@ -142,7 +142,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" dismissModal aria-label="Close"></button>
                         </div>
                         <div class="modal-body px=auto py-auto">
-                            <div class="mb-3">
+                            <!-- <div class="mb-3">
                                 <select id="selectGenre" name="genre" class="form-control">
                                     <option value="">Selecione um Gênero</option>
                                 </select>
@@ -156,12 +156,12 @@
                             </div>
                             <div id="atoresPool" class="mb-3 p-2">
 
-                            </div>
+                            </div> -->
                             <div class="input-group mb-3">
                                 <input id="movie_title_rec" name="movie_title_rec" a type="text" class="form-control" placeholder="Titulo do Filme" aria-label=""Titulo do Filme" aria-describedby="button-addon2">
                                 <button id="movietitleBtn" class="btn btn-filmology" type="button" id="button-addon2" onclick="recomendMovie()">Pesquisar pelo titulo</button>
                             </div>
-                            <div class="mb-3 row">
+                            <!-- <div class="mb-3 row">
                                 <div class="col-6 align-self-center">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="notaOpt" id="notaOpt1" value="option1">
@@ -182,7 +182,7 @@
                                         </label>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" dismissModal>Close</button>
@@ -199,9 +199,11 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" dismissModal aria-label="Close"></button>
                         </div>
                         <div class="modal-body px=auto py-auto">
-                            <p class="lh-base fs-5 fw-lighter" id="rec-movie">
+                            <p class="lh-base fs-5 fw-lighter" >
                                 
                             </p>
+                            <div id="rec-movie">
+                            </div>
                             <p></p>
                         </div>
                         <div class="modal-footer">
